aktionsprodukte und startseite == index

--- a/startseite.html
+++ b/startseite.html
@@ -1,14 +1,94 @@
-<meta http-equiv="refresh" content="0; url=http://www.wunschgravur.de/">
+<style type="text/css">
 
-<script type="text/javascript">
-	<!--
-	window.location = "http://www.wunschgravur.de/";
-	window.location.href = "http://www.wunschgravur.de/";
-	window.document.location.href = "http://www.wunschgravur.de/";
-	document.location.href = "http://www.wunschgravur.de/";
-	//–>
+	/* Schloesser */
+	#title_01 {
+		padding:0;
+		border:0;
+		width: 124px;
+		height: 304px;
+		float: left;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/title/schloesser.jpg") no-repeat scroll right top transparent;
+	}
 
-	<noscript>
-		Sie haben kein Javascript aktiviert, bitte verwenden sie einen aktuellen Browser und erlauben sie ihrem Browser Scripte auszuführen, um diese Seite mit allen ihren Funktionen nutzen zu können. Vielen Dank
-	</noscript>
-</script>
+	/* Zippos */
+	#title_02 {
+		padding:0;
+		border:0;
+		width: 127px;
+		height: 304px;
+		float: left;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/title/zippos.jpg") no-repeat scroll right top transparent;
+	}
+
+	/* Musik */
+	#title_03 {
+		padding:0;
+		border:0;
+		width: 125px;
+		height: 304px;
+		float: left;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/title/musik.jpg") no-repeat scroll right top transparent;
+	}
+
+	/* Messer */
+	#title_04 {
+		padding:0;
+		border:0;
+		width: 103px;
+		height: 304px;
+		float: left;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/title/messer.jpg") no-repeat scroll right top transparent;
+	}
+
+	/* Taschenlampen */
+	#title_05 {
+		padding:0;
+		border:0;
+		width: 196px;
+		height: 304px;
+		float: left;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/title/taschenlampen.jpg") no-repeat scroll right top transparent;
+	}
+
+	/* Industrie */
+	#title_06 {
+		padding:0;
+		border:0;
+		width: 185px;
+		height: 304px;
+		float: left;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/title/industrie.jpg") no-repeat scroll right top transparent;
+	}
+
+	#aktionsprodukte {
+		display:block;
+		width: 860px;
+		height: 93px;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/startseite_aktionsbutton.jpg") no-repeat scroll right top transparent;
+	}
+
+	#content_kat {
+		padding-top: 310px;
+		min-height: 240px !important;
+	}
+
+</style>
+
+<a id="title_01" href="/schloesser"></a>
+<a id="title_02" href="/zippos"></a>
+<a id="title_03" href="/musik"></a>
+<a id="title_04" href="/messer"></a>
+<a id="title_05" href="/taschenlampen"></a>
+<a id="title_06" href="http://www.ctc-combitec.de"></a>
+
+<div id="content_kat">
+
+	<a id="aktionsprodukte" href="/aktionsprodukte">
+
+	</a>
+	<p class="inhalt">
+	<!-- ANFANG: Beschreibungstext -->
+		
+	<!-- ENDE: Beschreibungstext -->
+	</p> 
+</div>
