seperate content and info

--- a/content/startseite.html
+++ b/content/startseite.html
@@ -74,16 +74,16 @@
 
 </style>
 
-<a id="title_01" href="/schloesser"></a>
-<a id="title_02" href="/zippos"></a>
-<a id="title_03" href="/musik"></a>
-<a id="title_04" href="/messer"></a>
-<a id="title_05" href="/taschenlampen"></a>
+<a id="title_01" href="http://www.wunschgravur.de/schloesser"></a>
+<a id="title_02" href="http://www.wunschgravur.de/zippos"></a>
+<a id="title_03" href="http://www.wunschgravur.de/musik"></a>
+<a id="title_04" href="http://www.wunschgravur.de/messer"></a>
+<a id="title_05" href="http://www.wunschgravur.de/taschenlampen"></a>
 <a id="title_06" href="http://www.ctc-combitec.de"></a>
 
 <div id="content_kat">
 
-	<a id="aktionsprodukte" href="/aktionsprodukte">
+	<a id="aktionsprodukte" href="http://www.wunschgravur.de/aktionsprodukte">
 
 	</a>
 	<p class="inhalt">
