zippos: neue buttons

--- a/content/zippos.html
+++ b/content/zippos.html
@@ -1,76 +1,91 @@
+<style type="text/css">
+	.unterkat_button_img {
+		background-image: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/zippos/buttons/buttons-zippos.png") !important;
+		background-repeat:no-repeat;
+	}
+	a#bildergalerie {
+		background-position: 0px 0px;
+	}
+	a:hover#bildergalerie {
+		background-position: -275px 0px;
+	}
+
+	/* 1 * 47 */
+	a#textgravur {
+		background-position: 0px -47px;
+	}
+	a:hover#textgravur {
+		background-position: -275px -47px;
+	}
+
+	/* 2 * 47 */
+	a#logogravur {
+		background-position: 0px -94px;
+	}
+	a:hover#logogravur {
+		background-position: -275px -94px;
+	}
+
+	/* 3 * 47 */
+	a#ohne {
+		background-position: 0px -141px;
+	}
+	a:hover#ohne {
+		background-position: -275px -141px;
+	}
+
+	/* 4 * 47 */
+	a#themen {
+		background-position: 0px -188px;
+	}
+	a:hover#themen {
+		background-position: -275px -188px;
+	}
+
+	/* 5 * 47 */
+	a#zubehoer {
+		background-position: 0px -235px;
+	}
+	a:hover#zubehoer {
+		background-position: -275px -235px;
+	}
+
+	#kat_zippos {
+		padding:0;
+		border:0;
+		width: 860px;
+		height: auto;
+		padding-top: 276px;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/zippos/kategorie_zippos.jpg") no-repeat scroll right top transparent;
+	}
+
+</style>
+
 <div id="content_kat">
-	<div id="kat_Zippo">
-		<div class="unterkat_button_all">
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/zippos/textgravur" style="width: 32%;">
-				<div class="unterkat_button_text">
-					<div class="unterkat_button_flash"></div>
-					<!-- ANFANG: Hier Ueberschrift einfuegen -->
-					Zippo mit Textgravur
-					<!-- ENDE: Hier Ueberschrift einfuegen -->
-					<div class="unterkat_button_untertext">
-					<!-- ANFANG: Hier Untertext einfuegen -->
+	<div id="kat_zippos">
+		<div class="unterkat_button_img_all">
 
-					<!-- ENDE: Hier Untertext einfuegen -->
-					</div>
-				</div>
-			</a>
+			<!-- Bildergalerie -->
+			<a id="bildergalerie" class="unterkat_button_img" href="zippos/bildergalerie"></a>
 
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/zippos/logogravur" style="width: 30%;">
-				<div class="unterkat_button_text">
-					<div class="unterkat_button_flash"></div>
-					<!-- ANFANG: Hier Ueberschrift einfuegen -->
-					Zippo mit Foto / Logogravur
-					<!-- ENDE: Hier Ueberschrift einfuegen -->
-					<div class="unterkat_button_untertext">
-					<!-- ANFANG: Hier Untertext einfuegen -->
+			<!-- Zippo mit Textgravur -->
+			<a id="textgravur" class="unterkat_button_img" href="/zippos/textgravur"></a>
 
-					<!-- ENDE: Hier Untertext einfuegen -->
-					</div>
-				</div>
-			</a>
+			<!-- Zippo mit Foto / Logogravur -->
+			<a id="logogravur" class="unterkat_button_img" href="/zippos/logogravur"></a>
 
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/zippos/ohne" style="width: 32%;">
-				<div class="unterkat_button_text">
-					<div class="unterkat_button_flash"></div>
-					<!-- ANFANG: Hier Ueberschrift einfuegen -->
-					Zippo ohne Gravur
-					<!-- ENDE: Hier Ueberschrift einfuegen -->
-					<div class="unterkat_button_untertext">
-					<!-- ANFANG: Hier Untertext einfuegen -->
-
-					<!-- ENDE: Hier Untertext einfuegen -->
-					</div>
-				</div>
-			</a>
 		</div>
-		<div class="unterkat_button_all">
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/zippos/themen" style="width: 48%;">
-				<div class="unterkat_button_text">
-					<div class="unterkat_button_flash"></div>
-					<!-- ANFANG: Hier Ueberschrift einfuegen -->
-					Themenzippos
-					<!-- ENDE: Hier Ueberschrift einfuegen -->
-					<div class="unterkat_button_untertext">
-					<!-- ANFANG: Hier Untertext einfuegen -->
+		<div class="unterkat_button_img_all">
 
-					<!-- ENDE: Hier Untertext einfuegen -->
-					</div>
-				</div>
-			</a>
+			<!-- Zippo ohne Gravur -->
+			<a id="ohne" class="unterkat_button_img" href="/zippos/ohne"></a>
 
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/zippos/zubehoer" style="width: 48%;">
-				<div class="unterkat_button_text">
-					<div class="unterkat_button_flash"></div>
-					<!-- ANFANG: Hier Ueberschrift einfuegen -->
-					Zippo Zubehör
-					<!-- ENDE: Hier Ueberschrift einfuegen -->
-					<div class="unterkat_button_untertext">
-					<!-- ANFANG: Hier Untertext einfuegen -->
+			<!-- Themenzippos -->
+			<a id="themen" class="unterkat_button_img" href="/zippos/themen"></a>
 
-					<!-- ENDE: Hier Untertext einfuegen -->
-					</div>
-				</div>
-			</a>
+			<!-- Zippo Zubehör -->
+			<a id="zubehoer" class="unterkat_button_img" href="/zippos/zubehoer"></a>
+
 		</div>
 	</div>
 	<p class="inhalt">
