--- a/content/zippos.html
+++ b/content/zippos.html
@@ -1,8 +1,10 @@
 <style type="text/css">
+
 	.unterkat_button_img {
 		background-image: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/zippos/buttons/buttons-zippos.png") !important;
 		background-repeat:no-repeat;
 	}
+	
 	a#bildergalerie {
 		background-position: 0px 0px;
 	}
@@ -66,7 +68,7 @@
 		<div class="unterkat_button_img_all">
 
 			<!-- Bildergalerie -->
-			<a id="bildergalerie" class="unterkat_button_img" href="zippos/bildergalerie"></a>
+			<a id="bildergalerie" class="unterkat_button_img" href="/zippos/bildergalerie"></a>
 
 			<!-- Zippo mit Textgravur -->
 			<a id="textgravur" class="unterkat_button_img" href="/zippos/textgravur"></a>
