schloesser: neue buttons

--- a/content/schloesser.html
+++ b/content/schloesser.html
@@ -1,7 +1,43 @@
+<style type="text/css">
+
+	.unterkat_button_img {
+		background-image: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/schloesser/buttons/buttons-schloesser.png") !important;
+		background-repeat:no-repeat;
+	}
+
+	a#bildergalerie {
+		background-position: 0px 0px;
+	}
+	a:hover#bildergalerie {
+		background-position: -275px 0px;
+	}
+
+	#kat_schloesser {
+		padding:0;
+		border:0;
+		width: 860px;
+		height: auto;
+		padding-top: 276px;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/schloesser/kategorie_schloesser.jpg") no-repeat scroll right top transparent;
+	}
+
+</style>
+
 <div id="content_kat">
-	<div id="kat_Schloesser">
-		<!-- Keine Unterkategorie -->
+	<div id="kat_schloesser">
+		<div class="unterkat_button_img_all">
+
+			<!-- Bildergalerie -->
+			<a id="bildergalerie" class="unterkat_button_img" href="/schloesser/bildergalerie"></a>
+
+			<!-- Leeres Feld -->
+			<span class="unterkat_button_placeholder"></span>
+
+			<!-- Leeres Feld -->
+			<span class="unterkat_button_placeholder"></span>
+		</div>
 	</div>
+
 	<p class="inhalt">
 		<!-- ANFANG: nur dieser Bereich darf veraendert werden -->
 		<font size="2">Alle Schlösser können mit einem Text, Grafiken oder Logo graviert werden. Gravierbar ist die Vorderseite und/oder Rückseite. Beispiele finden Sie auch in der <a href="?ObjectPath=/Shops/62874629/Categories/20/Beispielgalerie_Schloesser">Beispielgalerie Schlösser</a> oder  in unserer <a href="?ObjectPath=/Shops/62874629/Categories/Bildergalerie">Bildergalerie</a>!<br /><b><span style="text-decoration: underline;">Die Preisangabe bezieht sich auf den Artikel inklusive Textgravur auf einer Seite, inkl. MwSt. zzgl. Versand. </span></b></font> <font size="2"><br />
