musik: neue buttons

--- a/content/musik.html
+++ b/content/musik.html
@@ -1,4 +1,32 @@
 <style type="text/css">
+
+	.unterkat_button_img {
+		background-image: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/musik/buttons/buttons-musik.png") !important;
+		background-repeat:no-repeat;
+	}
+	a#plektren {
+		background-position: 0px 0px;
+	}
+	a:hover#plektren {
+		background-position: -275px 0px;
+	}
+
+	/* 1 * 47 */
+	a#gitarrengurte {
+		background-position: 0px -47px;
+	}
+	a:hover#gitarrengurte {
+		background-position: -275px -47px;
+	}
+
+	/* 2 * 47 */
+	a#drumsticks {
+		background-position: 0px -94px;
+	}
+	a:hover#drumsticks {
+		background-position: -275px -94px;
+	}
+
 	#kat_musik {
 		padding:0;
 		border:0;
@@ -10,61 +38,30 @@
 </style>
 
 <div id="content_kat">
-<div id="kat_musik">
-<div class="unterkat_button_all">
-<a class="unterkat_button_together" href="http://www.wunschgravur.de/musik/plektren" style="width: 32%;">
-<div class="unterkat_button_text">
-<div class="unterkat_button_flash"></div>
-<!-- ANFANG: Hier Ueberschrift einfuegen -->
-Plektren / Picks
-<!-- ENDE: Hier Ueberschrift einfuegen -->
-<div class="unterkat_button_untertext">
-<!-- ANFANG: Hier Untertext einfuegen -->
+	<div id="kat_musik">
+		<div class="unterkat_button_img_all">
 
-<!-- ENDE: Hier Untertext einfuegen -->
-</div>
-</div>
-</a>
-<a class="unterkat_button_together" href="http://www.wunschgravur.de/musik/gitarrengurte" style="width: 30%;">
-<div class="unterkat_button_text">
-<div class="unterkat_button_flash"></div>
-<!-- ANFANG: Hier Ueberschrift einfuegen -->
-Gitarrengurte
-<!-- ENDE: Hier Ueberschrift einfuegen -->
-<div class="unterkat_button_untertext">
-<!-- ANFANG: Hier Untertext einfuegen -->
+			<!-- Plektren / Picks -->
+			<a id="plektren" class="unterkat_button_img" href="/musik/plektren"></a>
 
-<!-- ENDE: Hier Untertext einfuegen -->
-</div>
-</div>
-</a>
-<a class="unterkat_button_together" href="http://www.wunschgravur.de/musik/drumsticks" style="width: 32%;">
-<div class="unterkat_button_text">
-<div class="unterkat_button_flash"></div>
-<!-- ANFANG: Hier Ueberschrift einfuegen -->
-Drumsticks
-<!-- ENDE: Hier Ueberschrift einfuegen -->
-<div class="unterkat_button_untertext">
-<!-- ANFANG: Hier Untertext einfuegen -->
+			<!-- Gitarrengurte -->
+			<a id="gitarrengurte" class="unterkat_button_img" href="/musik/gitarrengurte"></a>
 
-<!-- ENDE: Hier Untertext einfuegen -->
-</div>
-</div>
-</a>
-</div>
-</div>
-<p class="inhalt">
-<!-- ANFANG: nur dieser Bereich darf veraendert werden -->
-<font size="2">Materialbeschreibungen unserer Plekten, Guitarrengurte und </font><font size="2">Drumsticks</font><font size="2"> finden Sie in den Artikelbeschreibungen.
-</font></p>
-<p class="inhalt"><font size="2">			Klicken Sie hierfür auf die Kategorie und dann auf Ihren Wunschartikel!
-</font></p>
-<p class="inhalt"><font size="2">			<b><span style="text-decoration: underline;">Die Preisangabe bezieht sich auf den Artikel inkl. Textgravur, inkl. MwSt. zzgl. Versand.</span></b>
-Welche Gravurart und Schriftart Sie wünschen, können Sie auf der Artikelseite auswählen.
-Sonderwünsche realisieren wir gerne. Sie können uns diese über das Feld "Bemerkungen zur Bestellung" in dem Warenkorb mitteilen.
-Für Mengenrabatte kontaktieren oder andere Anfragen Sie uns bitte vor Bestellung über: <a href="mailto:info@wunschgravur.de">info@wunschgravur.de</a>.
-</font><!-- ENDE: nur dieser Bereich darf veraendert werden -->
-</p>
+			<!-- Drumsticks -->
+			<a id="drumsticks" class="unterkat_button_img" href="/musik/drumsticks"></a>
+
+		</div>
+	</div>
+	<p class="inhalt">
+		<!-- ANFANG: nur dieser Bereich darf veraendert werden -->
+		Materialbeschreibungen unserer Plekten, Guitarrengurte und Drumsticksfinden Sie in den Artikelbeschreibungen.<br><br>
+		Klicken Sie hierfür auf die Kategorie und dann auf Ihren Wunschartikel!<br><br>
+		<b><span style="text-decoration: underline;">Die Preisangabe bezieht sich auf den Artikel inkl. Textgravur, inkl. MwSt. zzgl. Versand.</span></b>
+		Welche Gravurart und Schriftart Sie wünschen, können Sie auf der Artikelseite auswählen.
+		Sonderwünsche realisieren wir gerne. Sie können uns diese über das Feld "Bemerkungen zur Bestellung" in dem Warenkorb mitteilen.
+		Für Mengenrabatte kontaktieren oder andere Anfragen Sie uns bitte vor Bestellung über: <a href="mailto:info@wunschgravur.de">info@wunschgravur.de</a>.
+		<!-- ENDE: nur dieser Bereich darf veraendert werden -->
+	</p>
 </div>
 
 <!-- ANFANG: Links als Maps für das Kategoriebild -->
