--- a/info/musik.html
+++ b/info/musik.html
@@ -1,6 +1,6 @@
-Materialbeschreibungen unserer Plekten, Guitarrengurte und Drumsticks finden Sie in den Artikelbeschreibungen.
-Klicken Sie hierfür auf die Kategorie und dann auf Ihren Wunschartikel!
-Die Preisangabe bezieht sich auf den Artikel inkl. Textgravur, inkl. MwSt. zzgl. Versand.
-Welche Gravurart und Schriftart Sie wünschen, können Sie auf der Artikelseite auswählen.
-Sonderwünsche realisieren wir gerne. Sie können uns diese über das Feld "Bemerkungen zur Bestellung" in dem Warenkorb mitteilen.
-Für Mengenrabatte kontaktieren oder andere Anfragen Sie uns bitte vor Bestellung über: <a href="mailto:info@wunschgravur.de">info@wunschgravur.de</a>.
+		Materialbeschreibungen unserer Plekten, Guitarrengurte und Drumsticksfinden Sie in den Artikelbeschreibungen.<br><br>
+		Klicken Sie hierfür auf die Kategorie und dann auf Ihren Wunschartikel!<br><br>
+		<b><span style="text-decoration: underline;">Die Preisangabe bezieht sich auf den Artikel inkl. Textgravur, inkl. MwSt. zzgl. Versand.</span></b>
+		Welche Gravurart und Schriftart Sie wünschen, können Sie auf der Artikelseite auswählen.
+		Sonderwünsche realisieren wir gerne. Sie können uns diese über das Feld "Bemerkungen zur Bestellung" in dem Warenkorb mitteilen.
+		Für Mengenrabatte kontaktieren oder andere Anfragen Sie uns bitte vor Bestellung über: <a href="mailto:info@wunschgravur.de">info@wunschgravur.de</a>.
