--- a/content/messer.html
+++ b/content/messer.html
@@ -151,65 +151,60 @@
 
 <div id="content_kat">
 	<div id="kat_messer">
-		<div class="unterkat_button_img_all">
-			<!-- Bildergalerie Messer -->
-			<a id="messerbildergalerie" class="unterkat_button_img" href="/bildergalerie"></a>
 
-			<!-- Schweizer Messer -->
-			<a id="schweizermesser" class="unterkat_button_img" href="/messer/schweizer"></a>
+		<!-- Bildergalerie Messer -->
+		<a id="messerbildergalerie" class="unterkat_button_img" href="/messer/bildergalerie"></a>
 
-			<!-- Anglermesser -->
-			<a id="anglermesser" class="unterkat_button_img" href="/messer/angler"></a>
-		</div>
-		<div class="unterkat_button_img_all">
-			<!-- Army-Messer -->
-			<a id="armymesser" class="unterkat_button_img" href="/messer/army"></a>
+		<!-- Schweizer Messer -->
+		<a id="schweizermesser" class="unterkat_button_img" href="/messer/schweizer"></a>
 
-			<!-- Bowie-Messer-->
-			<a id="bowiemesser" class="unterkat_button_img" href="/messer/bowie"></a>
+		<!-- Anglermesser -->
+		<a id="anglermesser" class="unterkat_button_img" href="/messer/angler"></a>
 
-			<!-- Einhandmesser -->
-			<a id="einhandmesser" class="unterkat_button_img" href="/messer/einhand"></a>
-		</div>
-		<div class="unterkat_button_img_all">
-			<!-- Gürtelmesser -->
-			<a id="guertelmesser" class="unterkat_button_img" href="/messer/guertel"></a>
+		<!-- Army-Messer -->
+		<a id="armymesser" class="unterkat_button_img" href="/messer/army"></a>
 
-			<!-- Jagdmesser -->
-			<a id="jagdmesser" class="unterkat_button_img" href="/messer/jagd"></a>
+		<!-- Bowie-Messer-->
+		<a id="bowiemesser" class="unterkat_button_img" href="/messer/bowie"></a>
 
-			<!-- Keramikmesser -->
-			<a id="keramikmesser" class="unterkat_button_img" href="/messer/keramik"></a>
-		</div>
-		<div class="unterkat_button_img_all">
-			<!-- Kindermesser -->
-			<a id="kindermesser" class="unterkat_button_img" href="/messer/kinder"></a>
+		<!-- Einhandmesser -->
+		<a id="einhandmesser" class="unterkat_button_img" href="/messer/einhand"></a>
 
-			<!-- Kochmesser -->
-			<a id="kochmesser" class="unterkat_button_img" href="/messer/koch"></a>
+		<!-- Gürtelmesser -->
+		<a id="guertelmesser" class="unterkat_button_img" href="/messer/guertel"></a>
 
-			<!-- Multitools -->
-			<a id="multitools" class="unterkat_button_img" href="/messer/multitool"></a>
-		</div>
-		<div class="unterkat_button_img_all">
-			<!-- Rasiermesser -->
-			<a id="rasiermesser" class="unterkat_button_img" href="/messer/rasier"></a>
+		<!-- Jagdmesser -->
+		<a id="jagdmesser" class="unterkat_button_img" href="/messer/jagd"></a>
 
-			<!-- Rettungsmesser -->
-			<a id="rettungsmesser" class="unterkat_button_img" href="/messer/rettung"></a>
+		<!-- Keramikmesser -->
+		<a id="keramikmesser" class="unterkat_button_img" href="/messer/keramik"></a>
 
-			<!-- Seglermesser -->
-			<a id="seglermesser" class="unterkat_button_img" href="/messer/segler"></a>
-		</div>
-		<div class="unterkat_button_img_all">
-			<!-- Taschenmesser -->
-			<a id="taschenmesser" class="unterkat_button_img" href="/messer/taschen"></a>
+		<!-- Kindermesser -->
+		<a id="kindermesser" class="unterkat_button_img" href="/messer/kinder"></a>
 
-			<!-- Messerzubehoer -->
-			<a id="messerzubehoer" class="unterkat_button_img" href="/messer/zubehoer"></a>
+		<!-- Kochmesser -->
+		<a id="kochmesser" class="unterkat_button_img" href="/messer/koch"></a>
 
-			<!-- Leeres Feld -->
-			<span class="unterkat_button_placeholder"></span>
+		<!-- Multitools -->
+		<a id="multitools" class="unterkat_button_img" href="/messer/multitool"></a>
+
+		<!-- Rasiermesser -->
+		<a id="rasiermesser" class="unterkat_button_img" href="/messer/rasier"></a>
+
+		<!-- Rettungsmesser -->
+		<a id="rettungsmesser" class="unterkat_button_img" href="/messer/rettung"></a>
+
+		<!-- Seglermesser -->
+		<a id="seglermesser" class="unterkat_button_img" href="/messer/segler"></a>
+
+		<!-- Taschenmesser -->
+		<a id="taschenmesser" class="unterkat_button_img" href="/messer/taschen"></a>
+
+		<!-- Messerzubehoer -->
+		<a id="messerzubehoer" class="unterkat_button_img" href="/messer/zubehoer"></a>
+
+		<!-- Leeres Feld -->
+		<span class="unterkat_button_placeholder"></span>
 		</div>
 	</div>
 	<p class="inhalt">
