--- a/content/unterwegs.html
+++ b/content/unterwegs.html
@@ -1,62 +1,72 @@
+<style type="text/css">
+
+	.unterkat_button_img {
+		background-image: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/unterwegs/buttons/buttons-unterwegs.png") !important;
+		background-repeat:no-repeat;
+	}
+	a#brillenetuis {
+		background-position: 0px 0px;
+	}
+	a:hover#brillenetuis {
+		background-position: -275px 0px;
+	}
+
+	/* 1 * 47 */
+	a#zigarettenetuis {
+		background-position: 0px -47px;
+	}
+	a:hover#zigarettenetuis {
+		background-position: -275px -47px;
+	}
+
+	/* 2 * 47 */
+	a#outdoor {
+		background-position: 0px -94px;
+	}
+	a:hover#outdoor {
+		background-position: -275px -94px;
+	}
+
+	/* 3 * 47 */
+	a#dosen {
+		background-position: 0px -141px;
+	}
+	a:hover#dosen {
+		background-position: -275px -141px;
+	}
+
+	#kat_unterwegs {
+		padding:0;
+		border:0;
+		width: 860px;
+		height: auto;
+		padding-top: 276px;
+		background: url("/WebRoot/Store21/Shops/62874629/MediaGallery/metis/kategorien/unterwegs/kategorie_unterwegs.jpg")no-repeat scroll right top transparent;
+	}
+</style>
+
 <div id="content_kat">
-	<div id="kat_Unterwegs">
-		<div class="unterkat_button_all">
+	<div id="kat_unterwegs">
+		<div class="unterkat_button_img_all">
+
 			<!-- Brillenetuis -->
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/unterwegs/brillenetuis" style="width: 23%;">
-				<div class="unterkat_button_text">
-				<div class="unterkat_button_flash"></div>
-				<!-- ANFANG: Hier Ueberschrift einfuegen -->
-				Brillenetuis
-				<!-- ENDE: Hier Ueberschrift einfuegen -->
-				<div class="unterkat_button_untertext">
-				<!-- ANFANG: Hier Untertext einfuegen -->
+			<a id="brillenetuis" class="unterkat_button_img" href="/unterwegs/brillenetuis"></a>
 
-				<!-- ENDE: Hier Untertext einfuegen -->
-				</div>
-				</div>
-			</a>
 			<!-- Zigarettenetuis -->
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/unterwegs/zigarettenetuis" style="width: 23%;">
-				<div class="unterkat_button_text">
-				<div class="unterkat_button_flash"></div>
-				<!-- ANFANG: Hier Ueberschrift einfuegen -->
-				Zigarettenetuis
-				<!-- ENDE: Hier Ueberschrift einfuegen -->
-				<div class="unterkat_button_untertext">
-				<!-- ANFANG: Hier Untertext einfuegen -->
+			<a id="zigarettenetuis" class="unterkat_button_img" href="/unterwegs/zigarettenetuis"></a>
 
-				<!-- ENDE: Hier Untertext einfuegen -->
-				</div>
-				</div>
-			</a>
 			<!-- Outdoor und Sport -->
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/unterwegs/outdoor" style="width: 23%;">
-				<div class="unterkat_button_text">
-				<div class="unterkat_button_flash"></div>
-				<!-- ANFANG: Hier Ueberschrift einfuegen -->
-				Outdoor &amp; Sport
-				<!-- ENDE: Hier Ueberschrift einfuegen -->
-				<div class="unterkat_button_untertext">
-				<!-- ANFANG: Hier Untertext einfuegen -->
+			<a id="outdoor" class="unterkat_button_img" href="/unterwegs/outdoor"></a>
 
-				<!-- ENDE: Hier Untertext einfuegen -->
-				</div>
-				</div>
-			</a>
 			<!-- Dosen -->
-			<a class="unterkat_button_together" href="http://www.wunschgravur.de/unterwegs/dosen" style="width: 23%;">
-				<div class="unterkat_button_text">
-				<div class="unterkat_button_flash"></div>
-				<!-- ANFANG: Hier Ueberschrift einfuegen -->
-				Dosen
-				<!-- ENDE: Hier Ueberschrift einfuegen -->
-				<div class="unterkat_button_untertext">
-				<!-- ANFANG: Hier Untertext einfuegen -->
+			<a id="dosen" class="unterkat_button_img" href="/unterwegs/dosen"></a>
 
-				<!-- ENDE: Hier Untertext einfuegen -->
-				</div>
-				</div>
-			</a>
+			<!-- Leeres Feld -->
+			<span class="unterkat_button_placeholder"></span>
+
+			<!-- Leeres Feld -->
+			<span class="unterkat_button_placeholder"></span>
+
 		</div>
 	</div>
 </div>
