--- a/content/taschenlampen.html
+++ b/content/taschenlampen.html
@@ -1,46 +1,48 @@
 <div id="content_kat">
-<div id="kat_Taschenlampen">
-<div class="unterkat_button_all">
-<a class="unterkat_button_together" href="http://www.wunschgravur.de/taschenlampen/normal" style="width: 48%;">
-<div class="unterkat_button_text">
-<div class="unterkat_button_flash"></div>
-	<!-- ANFANG: Hier Ueberschrift einfuegen -->
-		Taschenlampen
-	<!-- ENDE: Hier Ueberschrift einfuegen -->
-<div class="unterkat_button_untertext">
-	<!-- ANFANG: Hier Untertext einfuegen -->
-		
-	<!-- ENDE: Hier Untertext einfuegen -->
-</div>
-</div>
-</a>
-<a class="unterkat_button_together" href="http://www.wunschgravur.de/taschenlampen/zubehoer" style="width: 48%;">
-<div class="unterkat_button_text">
-<div class="unterkat_button_flash"></div>
-	<!-- ANFANG: Hier Ueberschrift einfuegen -->
-			Zubehör
-	<!-- ENDE: Hier Ueberschrift einfuegen -->
-<div class="unterkat_button_untertext">
-	<!-- ANFANG: Hier Untertext einfuegen -->
-		
-	<!-- ENDE: Hier Untertext einfuegen -->
-</div>
-</div>
-</a>
-</div>
+	<div id="kat_Taschenlampen">
+		<div class="unterkat_button_all">
+			<!-- Taschenlampen -->
+			<a class="unterkat_button_together" href="http://www.wunschgravur.de/taschenlampen/normal" style="width: 48%;">
+				<div class="unterkat_button_text">
+					<div class="unterkat_button_flash"></div>
+					<!-- ANFANG: Hier Ueberschrift einfuegen -->
+					Taschenlampen
+					<!-- ENDE: Hier Ueberschrift einfuegen -->
+					<div class="unterkat_button_untertext">
+					<!-- ANFANG: Hier Untertext einfuegen -->
+
+					<!-- ENDE: Hier Untertext einfuegen -->
+					</div>
+				</div>
+			</a>
+			<!-- Zubehör -->
+			<a class="unterkat_button_together" href="http://www.wunschgravur.de/taschenlampen/zubehoer" style="width: 48%;">
+				<div class="unterkat_button_text">
+					<div class="unterkat_button_flash"></div>
+					<!-- ANFANG: Hier Ueberschrift einfuegen -->
+					Zubehör
+					<!-- ENDE: Hier Ueberschrift einfuegen -->
+					<div class="unterkat_button_untertext">
+					<!-- ANFANG: Hier Untertext einfuegen -->
+
+					<!-- ENDE: Hier Untertext einfuegen -->
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
 </div>
 <p class="inhalt">
-		<!-- ANFANG: Beschreibungstext --> <font size="2">Alle Artikel können mit einem Text, Foto, Grafiken oder Logo graviert werden. <br />
-			<span style="text-decoration: underline;"><b>Die Preisangabe bezieht sich auf den Artikel inkl. Textgravur, inkl. MwSt. zzgl. Versand</b></span>.
-			Welche Gravurart und Schriftart Sie wünschen, können Sie auf der Artikelseite auswählen. 
-			Sonderwünsche realisieren wir gerne. Sie können uns diese über das Feld ‚Bemerkungen zur Bestellung’ in dem Warenkorb mitteilen.
-			Für Mengenrabatte oder andere Anfragen kontaktieren Sie uns bitte vor Bestellung über: <a href="mailto:info@wunschgravur.de">info@wunschgravur.de</a>.   
-		</font><!-- ENDE: Beschreibungstext -->
-		</p>
-</div>
+	<!-- ANFANG: Beschreibungstext -->
+	<font size="2">Alle Artikel können mit einem Text, Foto, Grafiken oder Logo graviert werden. <br />
+	<span style="text-decoration: underline;"><b>Die Preisangabe bezieht sich auf den Artikel inkl. Textgravur, inkl. MwSt. zzgl. Versand</b></span>.
+	Welche Gravurart und Schriftart Sie wünschen, können Sie auf der Artikelseite auswählen. 
+	Sonderwünsche realisieren wir gerne. Sie können uns diese über das Feld ‚Bemerkungen zur Bestellung’ in dem Warenkorb mitteilen.
+	Für Mengenrabatte oder andere Anfragen kontaktieren Sie uns bitte vor Bestellung über: <a href="mailto:info@wunschgravur.de">info@wunschgravur.de</a>.   
+	</font>
+	<!-- ENDE: Beschreibungstext -->
+</p>
 
 <!-- ANFANG: Links als Maps für das Kategoriebild -->
-
 <a style="display: scroll; position: absolute; top: 0px; left: 0px; width: 310px; height: 280px;" href="http://www.wunschgravur.de/taschenlampen/normal"></a>
-
 <!-- ENDE: Links als Maps für das Kategoriebild -->
