--- a/content/startseite.html
+++ b/content/startseite.html
@@ -133,14 +133,11 @@
 	</a>
 	<p class="inhalt">
 	<!-- ANFANG: Beschreibungstext -->
-		Bestellungen mit Zahlungseingang bis zum 17.12.2012 werden noch vor Weihnachten 2012 versendet.<br>
-		Lastschriftzahlungen werden nur bis zum 14.12.2012 bearbeitet.<br>
-		Um Ihr Weihnachtgeschenk noch rechtzeitig zu erhalten, wählen Sie am besten Paypal oder Überweisung.<br>
-		Spätere Bestellung werden ab dem 2.1.2013 bearbeitet und versendet!<br>
+
 	<!-- ENDE: Beschreibungstext -->
 	</p> 
 </div>
-<div class="tickercontainer">
+<!-- <div class="tickercontainer">
 	<div class="mask">
 		<ul id="ticker01" class="newsticker">
 			<li>Bestellungen mit Zahlungseingang bis zum 17.12.2012 werden noch vor Weihnachten 2012 versendet.</li>
@@ -149,11 +146,11 @@
 			<li>Spätere Bestellung werden ab dem 2.1.2013 bearbeitet und versendet!</li>
 		</ul>
 	</div>
-</div>
+</div> -->
 <script type="text/javascript">
 	//<![CDATA[
-		jQuery.ready(function() {
-			jQuery("ul#ticker01").liScroll();
-		});
+		// jQuery.ready(function() {
+		// 	jQuery("ul#ticker01").liScroll();
+		// });
 	//]]>
 </script>
