beispielbilder in kategorien ausgetauscht

--- a/header.html
+++ b/header.html
@@ -693,6 +693,9 @@ div.AlignRight {
 .CategoryText {
     font-size: 13px !important;
 }
+.CategoryText a {
+    font-size: 13px !important;
+}
 
 /* -----------------> Produktliste */
 
@@ -1073,6 +1076,10 @@ table.ContentTable tr.Alternate td,
 .inhalt {
     padding: 10px !important;
     width: 840px;
+    font-size: 13px;
+}
+.inhalt a {
+	font-size: 13px;
 }
 
 /* <- Kategorie buttons als Bilder*/
