--- a/content/unterwegs.html
+++ b/content/unterwegs.html
@@ -35,6 +35,14 @@
 		background-position: -275px -141px;
 	}
 
+	/* 4 * 47 */
+	a#visitenkarten {
+		background-position: 0px -188px;
+	}
+	a:hover#visitenkarten {
+		background-position: -275px -188px;
+	}
+
 	#kat_unterwegs {
 		padding:0;
 		border:0;
@@ -61,8 +69,8 @@
 			<!-- Dosen -->
 			<a id="dosen" class="unterkat_button_img" href="/unterwegs/dosen"></a>
 
-			<!-- Leeres Feld -->
-			<span class="unterkat_button_placeholder"></span>
+			<!-- Dosen -->
+			<a id="visitenkarten" class="unterkat_button_img" href="/unterwegs/visitenkarten"></a>
 
 			<!-- Leeres Feld -->
 			<span class="unterkat_button_placeholder"></span>
